k8s-manifests/_03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-hw3
  namespace: 2025-msa-demoapp-hw3
spec:
  ports:
  - port: 80
    targetPort: service
  selector:
    app: demoapp-hw3
