k8s-manifests/_04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-hw3-plain
  namespace: 2025-msa-demoapp-hw3
spec:
  ingressClassName: nginx

  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          service:
            name: demoapp-hw3
            port:
              number: 80
        path: /
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-hw3-plain-rewrite
  namespace: 2025-msa-demoapp-hw3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx

  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          service:
            name: demoapp-hw3
            port:
              number: 80
        path: /otusapp/dubrovinen/(.*)$
        pathType: ImplementationSpecific
